系统查询接口加 Redis 缓存：菜单可见性/个人介绍/AI 模型与供应商/系统设置读多写少接口加 @Cacheable，写操作 @CacheEvict 失效；RedisConfig 注册 JavaTimeModule 支持 LocalDateTime 序列化；@Cacheable 方法返回 List 改用 Collectors.toList 避免 ImmutableCollections 反序列化失败